# SecureRoute-AI

./: .gitignore  Dockerfile  README.md  SecureRouteAI_Dev.ipynb  app.py  deploy_space.py  environment.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tickets.json
server/: __init__.py  app.py
